<resources>
    <!-- Strings proyecto Falta Uno -->
    <string name="app_name">Falta Uno</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_profile">Perfil</string>
    <string name="action_about">Acerca de...</string>
    <string name="search_title">Buscar</string>
    <string name="search_hint">Partido...</string>
    <string name="about_version">Falta Uno V1.0</string>
    <string name="action_disconnect">Desconectarse</string>
    <string name="button_OK">ACEPTAR</string>
    <string name="detalle_partido_titulo">Detalle del Partido</string>
    <string name="detalle_partido_hora">19:00 hs</string>
    <string name="detalle_partido_dia">Lunes 15 de Mayo</string>
    <string name="detalle_partido_nombre">Gran Futbol 5 vs 5</string>
    <string name="detalle_partido_dur">Duración</string>
    <string name="detalle_partido_precio">Precio:</string>
    <string name="detalle_partido_anfitrion">Anfitrion</string>
    <string name="nuevo_partido_titulo">Nuevo Partido</string>
    //Hardcodeo strings para canchas
    <string-array name="canchas_array">
        <item>Elegí la cancha...</item>
        <item>cancha 1</item>
        <item>cancha 2</item>
        <item>cancha 3</item>
        <item>cancha 4</item>
        <item>cancha 5</item>
    </string-array>
    <string name="pref_summary_location">Deshabilita la opción de compartir ubicación</string>
    <string name="pref_title_location">Compartir Ubicación</string>
    <string name="pref_summary_history">Permite guardar el historial de los partidos en los cuales participo</string>
    <string name="pref_title_history">Historial de Partidos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1869038746689339</string>
    <string name="cancel_login">Login Cancelado</string>
    <string name="mensaje_error">Hubo un error.</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="ajustes_title">Ajustes</string>
    <string name="perfil_hist_jugados">Jugados:</string>
    <string name="perfil_hist_creados">Creados:</string>
    <string name="firebase_error_login">Error en el inicio de sesión</string>
    <string name="pref_key_camera">Permita habilitar los permisos para que la aplicación pueda utilizar la cámara</string>
    <string name="pref_title_camera">Permitir uso de la cámara</string>
    <string name="profile_titulo">Perfil de Usuario</string>
    <string name="cancha_row_ubicacion">Ubicación</string>
    <string name="cancha_row_barrio">Barrio:</string>
    <string name="linear_layout_manager">eliminar1</string>
    <string name="grid_layout_manager">eliminar2</string>
    <string name="crear_cancha_titulo">Crear Cancha</string>
    <string name="crear_cancha_cant_jugadores">Selecciona la cantidad de jugadores</string>
    <string name="crear_cancha_ubicacion">Ingresa Ubicacion</string>
    <string name="crear_cancha_agregar_foto">Agrega una foto de la cancha</string>
    <string name="crear_cancha_button_ok">Crear Cancha!</string>
    <string name="mis_partidos_cancha">Cancha:</string>
    <string name="mis_partidos_fecha">Fecha:</string>
    <string name="mis_partidos_hora">Hora:</string>
    <string name="mis_partidos_rol">Rol:</string>
    <string name="partidos_jugadores_faltantes">Jugadores Faltantes:</string>
    <string name="partido_creado_por">Creado Por:</string>
    <string name="button_crearPartido">Crear Partido!</string>
    <string name="pref_sec_settings">Preferencias Acceso a Dispositivo</string>
    <string name="pref_hist_settings">Preferencias Acceso a Aplicación</string>
    <string-array name="cant_jugadores_array">
        <item>5</item>
        <item>7</item>
        <item>11</item>
    </string-array>
</resources>
