<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:src="@mipmap/ic_launcher_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="32dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_weight="3"
        android:background="@android:color/holo_orange_light"
        android:text="@string/detalle_partido_titulo"
        android:padding="10dp"
        />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/detParNombrePartido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalle_partido_nombre"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"/>
        <TextView
            android:id="@+id/detParDiaPartido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_partido_dia"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="@dimen/text_margin"/>

        <TextView
            android:id="@+id/detParHoraPartido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_partido_hora"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginBottom="@dimen/text_margin"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_gravity="center">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:text="@string/detalle_partido_dur"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/detParDuracionPartido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 hora"
                    android:textSize="16dp"
                    android:layout_marginLeft="@dimen/fab_margin"/>
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_partido_precio"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/detParPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 100"
                    android:textSize="16dp"
                    android:layout_marginLeft="@dimen/fab_margin"/>
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_partido_anfitrion"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:textSize="16dp"/>
                <TextView
                    android:id="@+id/detParAnfitrion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="red_luke87"
                    android:textSize="16dp"
                    android:layout_marginLeft="@dimen/fab_margin"/>
        </GridLayout>
    </LinearLayout>
</LinearLayout>