<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:gravity="center_vertical|center_horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/detParFrame">

        <LinearLayout
            android:id="@+id/detParEncabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <TextView
                android:id="@+id/textDetParTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:text="@string/detalle_partido_titulo"
                android:textAlignment="center"
                android:textSize="28dp"
                android:textColor="@color/verde_azulado_oscuro"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="0.1">
            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:background="@color/verde_azulado_oscuro"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detParMedio"
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="0.9">

            <TextView
                android:id="@+id/detParNombrePartido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalle_partido_nombre"
                android:textAlignment="center"
                android:layout_weight="0.1"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/detParDiaPartido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/detalle_partido_dia"
                android:textAlignment="center"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/detParHoraPartido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/detalle_partido_hora"
                android:textAlignment="center"
                android:textSize="20dp"/>

            <LinearLayout
                android:id="@+id/detParMedioDur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/fab_margin"
                android:weightSum="0.9">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_weight="0.2"
                    android:text="@string/detalle_partido_dur"
                    android:textAlignment="center"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/detParDuracionPartido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="1 hora"
                    android:textSize="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/detParMedioPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="0.9">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/detalle_partido_precio"
                    android:textAlignment="center"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/detParPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="$ 100"
                    android:textSize="16dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/detParMedioAnfitrion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="0.9">
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/detalle_partido_anfitrion"
                    android:textAlignment="center"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/detParAnfitrion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="red_luke87"
                    android:textSize="16dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/detParCantLugaresPartido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Quedan 3 lugares!"
                android:layout_marginTop="@dimen/fab_margin"
                android:textAlignment="center"
                android:layout_weight="0.1"
                android:textSize="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginBottom="45dp"
            android:weightSum="1">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/verde_azulado_oscuro"
                android:layout_gravity="top"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/det_par_pie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancelar"
                android:background="@drawable/button_partidos"
                android:layout_weight="0.49" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/verde_azulado_oscuro"
                android:layout_gravity="center"
                android:layout_weight="0.01" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unirse"
                android:background="@drawable/button_partidos"
                android:layout_weight="0.49" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="1">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/verde_azulado_oscuro"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>