<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/misPartidosCanchaFoto"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/separador_largo_row"
                android:src="@mipmap/ic_launcher_toolbar"
                />
                <View
                    android:layout_width="5dp"
                    android:layout_height="@dimen/separador_largo_row"
                    android:background="@android:color/holo_orange_light"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/misPartidosRowNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Partido Ejemplo 1"
                        android:textSize="@dimen/titulo_row"/>
                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rowCount="2"
                        android:columnCount="2"
                        android:layout_marginTop="@dimen/fila_row">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mis_partidos_cancha"
                            android:textSize="@dimen/fila_row"
                            android:textStyle="italic|bold"
                            />
                        <TextView
                            android:id="@+id/misPartidosCancha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cancha Ejemplo 1"
                            android:textSize="@dimen/fila_row"
                            android:layout_marginLeft="@dimen/text_margin"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mis_partidos_fecha"
                            android:textSize="@dimen/fila_row"
                            android:textStyle="italic|bold"
                            />
                        <TextView
                            android:id="@+id/misPartidosFecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hoy"
                            android:textSize="@dimen/fila_row"
                            android:layout_marginLeft="@dimen/text_margin"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mis_partidos_hora"
                            android:textSize="@dimen/fila_row"
                            android:textStyle="italic|bold"
                            />
                        <TextView
                            android:id="@+id/misPartidosHora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="19:00 hs."
                            android:textSize="@dimen/fila_row"
                            android:layout_marginLeft="@dimen/text_margin"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mis_partidos_rol"
                            android:textSize="@dimen/fila_row"
                            android:textStyle="italic|bold"
                            />
                        <TextView
                            android:id="@+id/misPartidosRol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Creador"
                            android:textSize="@dimen/fila_row"
                            android:layout_marginLeft="@dimen/text_margin"
                            />
                    </GridLayout>
                </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
